# Everybody.Codes-24

./: .gitignore  CMakeLists.txt  Day1.cpp  Day1.h  Helpers.h  Point.h  main.cpp  makefile  readme.md
Day1/: Day1.cpp  Day1.h
Day10/: Day10.h  Part1.cpp  Part2.cpp  Part3.cpp
Day11/: Day11.h  Part1.cpp  Part2.cpp  Part3.cpp
Day12/: Day12.h  Part1.cpp  Part2.cpp  Part3.cpp
Day13/: Day13.h  Part1.cpp  Part2.cpp  Part3.cpp  Platform.h
Day14/: Day14.h  Part1.cpp  Part2.cpp  Part3.cpp  direction.h
Day15/: Day15.h  GardenPoint.h  Part1.cpp  Part2.cpp  Part3.cpp
Day16/: CatFace.h  Day16.h  Part1.cpp  Part1.txt  Part2.cpp  Part3.cpp
Day2/: Day2.h  FindResult.h  Part1.cpp  Part2.cpp  Part3.cpp  Part3.txt  PointsToIntMap.cpp  Split.cpp  findWordOnGrid.cpp  pointsToIntMap.cpp
Day3/: Day3.h  Part1.cpp  Part2.cpp  Part3.cpp
Day4/: Day4.h  Part1.cpp  Part2.cpp  Part3.cpp
Day5/: Bucket.h  Day5.h  Part1.cpp  Part2.cpp  Part3.cpp
Day6/: Day6.h  Node.h  Part1.cpp  Part2.cpp  Part3.cpp
Day7/: Day7.h  Part1.cpp  Part2.cpp  Part3.cpp  Plan.h
Day8/: Day8.h  Part1.cpp  Part2.cpp  Part3.cpp
Day9/: Day9.h  Pair.h  Part1.cpp  Part2.cpp  Part3.cpp
Templates/: DayX.h  PartY.cpp
tests/: CMakeLists.txt  Day2.cpp  PointMatcher.h
